# django_project_model

./: .gitignore  README.md  libs.MD  pyproject.toml
core/: settings.py  urls.py
library_app/: admin.py  models.py
library_app/migrations/: 0001_initial.py
